Fix Java 17 compatibility issues
Co-authored-by: icebeam7 <6038239+icebeam7@users.noreply.github.com>